--- a/html/about.html
+++ b/html/about.html
@@ -10,5 +10,5 @@
         <div id="about"><a href="about.html">About</a></div>
         <div id="contact"><a href="contact.html">Contact Me</a></div>
 </div>
-Welcome to home
+Welcome to about.
 </html>
