Added a description to html-home File
Created in introduction to my portfolio, as well as formatting.
Also created a images folder to change background of my page, but im finding this isn't applying for some reason.

--- a/html/home.html
+++ b/html/home.html
@@ -5,10 +5,15 @@
         <link rel="stylesheet" href="styles.css">
 
     </head>
+    <body style="background-image: url(/html/images/pexels-henry-&-co-1939485.jpg);">
     <div id="Kyle">Kyle Pollock</div>
         <div id="home"><a href="home.html">Home</a></div>
         <div id="about"><a href="about.html">About</a></div>
         <div id="contact"><a href="contact.html">Contact Me</a></div>
 </div>
-Welcome to home
-</html>
+<br><br>
+<div id="divh"><H2 id="homeh">Welcome to my Portfolio!</H2></div>
+<div id="divht1"><h4 id="homet1">This entire web-site is about me! I know right, crazy! If you are here to see whether or not I have what it takes to design, and maintain your websites, you have come to the right place! This page <a href="home.html">Home</a> is all about me, my story. I think knowing who you are working with, is just as important as experience.</a></h4></div>
+<div id="divht2"><h5 id=homet2>I started my career in Retail at 17 years old, absolutely loving Customer Service and coming out of my shy high-school selfs shell. I become a Shift Manager at Mcdonalds at Only 19. After doing this for a year, I proceeded to look for a different form of retail, for more experience. So I started working at a Surf/Skate fashion store and jumped right into Shift Management again. I loved this, but I always had the desire to work somewhere in the IT field, in school I did film, tv and new media, but these classes mostly consisted of me messing around with the IT equipment, computers ETC. I proceeded into building my own computers which I found really fun and exciting. I started researching and came across Web-Development. I seemingly fun job, with loads of benefits which include but are not limited to, a great work-life balanced lifestyle, and the absolutely awesome paycheck! I currently am proficient in basic HTML, CCS3, and have recently started learning the basics of GitHub. Unfortunetly, working full-time, and studying whilst also not having family to help me, it is a struggle, and I wont stop studying in my spare time until I reach my goals! I am now studying the advanced side of HTML. While I am learning, I am learning fast. Hiring me would 100% be a huge investment in your company. Provided I am equiped with training with MylearningPeople as well as your company as well! I am very loyal, provided I am treated as an equal. </h5></div>
+<div id="divht3"><h5 id="homet3">If any of this sounds interesting, or if you think we will be a good fit. Please do not hesitate to contact me via the Contact methods in the <a href="contact.html">Contact Me</a> Page </h5></div>
+</body>
